[project]
name = "multi-agent-system-data-analyst-enterprise-build"
version = "0.1.0"
description = "Multi-agent-system (enterprise version) for data analysis using LangGraph (Supervisor + Specialist Agents)"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [
    { name = "Lawrence Willcox", GitHub = "https://github.com/AutomationPlease" }
]
keywords = [
    "langgraph",
    "langchain",
    "multi-agent",
    "ai",
    "automation",
    "data-analysis",
    "enterprise"
]

dependencies = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "langchain>=1.3.13",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "numpy>=2.5.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "supervisor>=4.3.0",
    "tavily-python>=0.7.26",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
